--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.18.2",
-    "axios": "^1.3.3"
+    "axios": "^1.3.3",
+    "xml2js": "^0.4.23"
   },
   "scripts": {
     "start": "node server.js"
